--- a/src/pages/UploadPage.css
+++ b/src/pages/UploadPage.css
@@ -5,7 +5,7 @@ body.welcome-page, body.other-unwanted-pages {
 
 .upload-page-container {
   width: 100vw;
-  min-height: 100vh;
+  min-height: 100%;
   margin: 0;
   padding: 16px;
   text-align: center;
@@ -17,9 +17,11 @@ body.welcome-page, body.other-unwanted-pages {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   overflow-x: hidden;
   box-sizing: border-box;
+  margin-top: 0 !important;
+  padding-top: max(16px, env(safe-area-inset-top, 0));
 }
 
 /* Top Back button */
